Basic Functionality with some minor visual tweaks